@@ -32,6 +32,13 @@ if mods["RampantArsenalFork"] and mods["mech-armor"] then
     }
 end
 
+
+if mods["RampantArsenalFork"] and mods["space-age"]then
+    Recipe["combat-mech-armor-rampant-arsenal"].category = "electronics"
+end
+if mods["metal-and-stars"]then
+    Recipe["prototype-mech-armor"].category = "electronics-or-handcrafting"
+end
 --Alterenative to fix how armour is added to a recipe.
 --[[
 if not data.raw.recipe["heavy-armor"].ingredients == {type="item", name="light-armor", amount=1} then
